kernel/libc/regex/err
regex.c: In function ‘main’:
regex.c:366:18: error: too many arguments to function ‘regex_yylex’
   while (token = regex_yylex(&val, &stack, &l)) {
                  ^
regex.c:232:5: note: declared here
 int regex_yylex(YYSTYPE *lvalp, lexer *l) {
     ^
regex.tab.c: In function ‘yyparse’:
regex.tab.c:1377:7: warning: implicit declaration of function ‘yyerror’ [-Wimplicit-function-declaration]
       yyerror (lex, YY_("syntax error"));
       ^
gcc: error: regex.o: No such file or directory
